styles/main.css
@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Serif&family=Saira+Semi+Condensed&display=swap");

@supports (font-variation-settings: normal) {
  :root {
    font-family: InterVariable, sans-serif;
  }
}

@media all and (max-width: 400px) {
  main {
    padding: 2rem;
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes fadeOut {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

.dropdown {
  position: relative;
  display: inline-block;
}

.project-menu {
  display: none;
  position: absolute;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 5;
  border-radius: 6px;
  transition-duration: 0s !important;
  transition-delay: 0ms !important;
  font-weight: 500;
  background: #313131d1;
}

.project-menu a {
  color: #efefef;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  border-radius: 6px;
}

.dropdown:hover .project-menu {
  display: block;
}

.project-menu *:hover {
  background-color: rgba(47, 79, 79, 0.818);
}

body,
html {
  font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  font-weight: 400;
  margin: 0;
  font-feature-settings: "liga" 1, "calt" 1; /* fix for Chrome */
  background: #313131;
  color: #efefef;
  padding: 0;
  /* overflow-x: hidden; */
}

@keyframes navAnim {
  from {
    backdrop-filter: blur(0px);
  }
  to {
    backdrop-filter: blur(1vh);
  }
}

.navbar {
  z-index: 7;
  /* background-color: #333; */
  /* Dark background color */
  /*padding: 20px; /* Add some padding */
  height: 50px; /* Set the height of the navbar */
  width: 100%; /* Set the width of the navbar */
  position: fixed; /* Make it stick to the top
    /* top: 0;*/
  grid-area: navbar;
  display: flex; /* Use flexbox to align the items */
  align-items: center; /* Center the items vertically */
  justify-content: space-around; /* Distribute the items evenly */
  view-timeline-name: --header;
  view-timeline-axis: block;
  animation: auto linear navAnim both;
  /* animation-timeline: view(); */
  animation-timeline: --header;
  animation-range: exit 0% exit 100%;
}

.logo-container,
.links {
  opacity: 0;
  animation: fadeIn 0.7s ease-in-out 1.5s 1 normal forwards;
}

/* Style the navbar title */
.navbar h1 {
  /* padding-left: 10px; */
  color: #efefef;
  /*font-size: min(5vw, 1.2em);*/
  font-size: large;
  text-align: left;
  font-weight: 600;
}

.navbar a {
  text-decoration: none; /* Remove underline */
  height: 100%;
}

/* Style the navbar links */
.links {
  display: inline-block; /* Display the links inline */
  color: #efefef; /* White text color */
  background: none;
  padding: 8px;
  /* overflow: hidden;  */
  text-decoration: none; /* Remove underline  */
  height: 100%;
  font-weight: 500;
}

/* Change the color of links on hover */
.links:hover {
  background-color: lightcyan; /* Light gray background color */
  color: rgb(66, 66, 66); /* Black text color */
  /* font-weight: 500; */
  border-radius: 8px;
}

.content {
  box-sizing: border-box;
}

/* Disappearing Scroller Header inspired by Dudley Storey's pen */
/* https://codepen.io/dudleystorey/pen/yaWzzR */

header {
  background-image: url(https://c43-sar.github.io/res/neom-uqAUg1zvMXQ-unsplash.jpg);
  padding-top: 61.73333333%;
  background-repeat: no-repeat;
  background-size: cover;
  font-family: "Saira Semi Condensed";
  overflow: hidden;
  padding-bottom: 0;
}

header img {
  position: absolute;
  top: 0;
  /* bottom: 0; */
  right: 0;
  /* height: 100%; */
  /* padding-bottom: 0; */
  /* width: 45.8%; */
  width: 43.438%;
}

header h1 {
  position: fixed;
  top: 1.5em;
  right: 8vw;
  font-size: 5vw;
  line-height: 0.9;
  margin-top: 0;
  /* opacity: 0; */
  text-align: center;
  animation: auto linear fadeOut both;
  animation-timeline: view();
  animation-range: exit 0% exit 100%;
  /* animation-delay: 2s; */
  /* -moz-animation: fadeOut; */
  /* -moz-animation-delay: 2s; */
  /* -o-animation: fadeOut; */
  /* -o-animation-delay: 2s; */
  /* -webkit-animation: fadeOut; */
  /* -webkit-animation-delay: 2s; */
}

/* header h1:active {
  animation: fadeIn 5s;
  -moz-animation: fadeIn 5s;
  -o-animation: fadeIn 5s;
  -webkit-animation: fadeIn 5s;
} */

header h1 span {
  display: block;
  font-size: 14vw;
}

main {
  background: #313131;
  position: relative;
  border: 1px solid #313131;
  /* font-family: 'IBM Plex Sans'; */
  /* font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; */
  font-size: 1.4rem;
  padding: 1.5rem 12.5%;
  line-height: 1.6;
}

main p {
  text-align: justify;
}

main a {
  color: lightblue;
}

main a:visited {
  color: lightslategray;
}

/* Chromium-exclusive CSS-only Reveal animation */
/* https://developer.chrome.com/articles/scroll-driven-animations/ */

@keyframes reveal {
  from {
    opacity: 0;
    clip-path: inset(0% 100% 0% 0%);
  }
  to {
    opacity: 1;
    clip-path: inset(0% 0% 0% 0%);
  }
}

.introText {
  /* view-timeline-name: --introText;
  view-timeline-axis: block; */
  animation: auto linear reveal both;
  animation-timeline: view();
  /* animation-timeline: --introText; */
  animation-range: entry 25% cover 50%;
}

footer {
  font-family: "IBM Plex Sans", system-ui, -apple-system, BlinkMacSystemFont,
    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
    sans-serif;
  font-size: smaller;
  font-weight: 300;
  text-align: center;
}
/* ... */

